# cnccontrol_rt

./: .config  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.md  config.h  main.c  sender.py  stm32f103.c  test.c
arch/: defconfig_emulation  defconfig_mega2560  defconfig_stm32f103
arch/emulation/: CMakeLists.txt  Makefile  config.h  main.c
arch/mega2560/: Makefile  arch-defs.h  config.h  flash.sh  main.c  platform.c  platform.h  steppers.c  uart.c  uart.h
arch/stm32f103/: CMakeLists.txt  Makefile  a.out  clock-arch.h  config.h  ethernet.c  gdb-launch.sh  iface.c  iface.h  main.c  net.c  net.h  ocd-launch.sh  platform.c  shell.c  shell.h  spi.c  spi.h  steppers.c  steps.c  stm32.ld  stm32f103.c  stm32f103.eth.c  stm32f103.spi.c  system.c  toolchain.cmake  uart.c  uart.h  uip-conf.h
arch/stm32f103/libip/: icmp.c  ip.c
arch/stm32f302/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  Makefile  clock-arch.h  config.h  flash.sh  iface.c  iface.h  libopencm3  main.c  net.c  ocd-launch.sh  platform.c  platform.h  spi.c  steppers.c  steppers.h  stm32.ld  uart.c  uip-conf.h
arch/test/: CMakeLists.txt  config.h  main.c
core/: CMakeLists.txt  Makefile  api.h  control.c  defs.h  err.h  gcodes.c  gcodes.h  moves.c  moves.h  serial.c  serial.h
core/control/: CMakeLists.txt  control.c  control.h  line.c  line.h  moves.c  moves.h  planner.c  planner.h  steppers.h  system.c  system.h
core/control/commands/: CMakeLists.txt
core/control/commands/gcode_handler/: .gcode_handler.c.swp  CMakeLists.txt  gcode_handler.c  gcode_handler.h
core/control/commands/status/: CMakeLists.txt  print_status.c  print_status.h
core/control/ioqueue/: CMakeLists.txt  print_events.c  print_events.h
core/control/moves/: CMakeLists.txt  acceleration.c  acceleration.h  arc.c  arc.h  common.c  common.h  helix.c  helix.h  line.c  line.h  moves.c  moves.h  steppers.h
core/control/moves/moves_arc/: CMakeLists.txt  arc.c  arc.h  segment.h
core/control/moves/moves_common/: CMakeLists.txt  Makefile  acceleration.c  acceleration.h  common.c  common.h  steppers.h
core/control/moves/moves_line/: CMakeLists.txt  line.c  line.h
core/control/moves/unit/: CMakeLists.txt  test_arc.c  test_line.c
core/control/planner/: CMakeLists.txt  planner.c  planner.h
core/control/tools/: CMakeLists.txt  tools.c  tools.h
core/err/: CMakeLists.txt  err.h
core/gcode/: CMakeLists.txt  gcodes.c  gcodes.h
core/math/: CMakeLists.txt  fixed.h  math.c  math.h
core/output/: CMakeLists.txt  output.c  output.h
core/shell/: .serial_sender.h.swp  CMakeLists.txt  print.c  print.h  serial_base.h  serial_sender.c  serial_sender.h  shell.c  shell.h  shell_base.h
core/shell/rdpos_io/: CMakeLists.txt  rdpos_io.c  rdpos_io.h
core/shell/serial_io/: CMakeLists.txt  serial_io.c  serial_io.h
core/shell/shell_print/: CMakeLists.txt  shell_print.c  shell_print.h
core/shell/shell_read/: CMakeLists.txt  shell_read.c  shell_read.h
core/shell/test_io/: CMakeLists.txt  test_io.c  test_io.h
core/unit_tests/: CMakeLists.txt  test_gcode  test_gcode.c  test_lines.c  test_planner.c
debugutils/: sender.py
drivers/: Makefile
include/config/: auto.conf.cmd
libmodbus/: modbus.c  modbus.h
libs/: Makefile
libs/libeth/: Makefile  ethernet.h
libs/libip/: Makefile  icmp.c  icmp.h  ip.c  net.c  udp.c
libs/libmodbus/: Makefile  modbus.h
libs/libshell/: Makefile  shell.c  shell.h
main/: Makefile
util/: echo-uart.py  portcfg.sh
