include(FindPkgConfig)
pkg_search_module(RDP REQUIRED rdp)
pkg_search_module(SERIAL_DATAGRAM REQUIRED serial_datagram)
pkg_search_module(CRC32 REQUIRED crc32)

add_library(rdpos_io STATIC rdpos_io.c)
target_include_directories(rdpos_io PUBLIC .)
target_include_directories(rdpos_io SYSTEM PUBLIC ${RDP_INCLUDE_DIRS} ${SERIAL_DATAGRAM_INCLUDE_DIRS} ${CRC32_INCLUDE_DIRS})
target_link_directories(rdpos_io PUBLIC ${RDP_LIBRARY_DIRS} ${SERIAL_DATAGRAM_LIBRARY_DIRS} ${CRC32_LIBRARY_DIRS})
target_link_libraries(rdpos_io shell_base ${RDP_LIBRARIES} ${SERIAL_DATAGRAM_LIBRARIES} ${CRC32_LIBRARIES})
